fix: add padding-bottom for ul lists and remove not needed line breaks on simple-start article

--- a/src/assets/css/post.css
+++ b/src/assets/css/post.css
@@ -15,6 +15,7 @@ h6 {
 
 ul {
 	padding-left: 2.5em;
+	padding-bottom: 16px;
 }
 
 img {
@@ -39,4 +40,8 @@ img {
 
 img.img-border {
 	border: 1px solid var(--color-border);
+}
+
+.p-flex {
+	display: flex;
 }
